--- a/style.css
+++ b/style.css
@@ -21,8 +21,9 @@ body {
 }
 
 header {
-    width:50%;
+    width:100%;
     height:20%;
     text-align: center;
     color: red;
+    margin: 0;
 }
